接口字段修改

--- a/huayun-web/src/main/resources/application.yml
+++ b/huayun-web/src/main/resources/application.yml
@@ -16,3 +16,5 @@ global:
     access-key-id: 36c34ff3094b4dec9786dcc35d1f0d41
     access-key-secret: b87e24ad3b00420fadec14a9260ca94e
     request-api-url: https://api.chinac.com/
+server:
+  port: 80
